# trade2.0

./: .gitignore  CLAUDE.md  config.yaml  download_15m_30m.sh  download_2026.py  download_node.sh  download_parallel.py  fix_15m_30m.sh  fix_data.sh  fix_pip.bat  setup.bat
code3.0/: COMMANDS.txt  backfill_scalp_metrics.py  diag.py  diag2.py  gen_all_approved_html.py  gen_missing_html.py  gen_xgb_reversal_v6_html.py  merge_scalp_batches.py  pyproject.toml  replay_best.py  run_scalp_batches.bat  run_scalp_batches_deepseek.bat  run_scalp_llm_deepseek.bat  save_best.py
code3.0/artefacts/: best_4h_43pct_dashboard.html  best_4h_43pct_trade_log.csv  best_chart.html  best_trades.csv  full_scheme_search_3state_wf_results.json  full_scheme_search_ai_wf_results.json  full_scheme_search_results.json  full_scheme_search_results_3state.json  full_scheme_search_results_ai.json  full_scheme_search_results_v2.json  full_scheme_search_results_v3.json  full_scheme_search_v2_wf_results.json  full_scheme_search_v3_wf_results.json  full_scheme_search_wf_results.json  idea16_3state_4h_results.json  wf_positive_results.json
code3.0/configs/: ai_ideas_v4.json  base.yaml  base_tp2x.yaml  best_4h_3state.yaml  best_4h_43pct.yaml  live.yaml  scalp.yaml  scalp_3tf.yaml  scalp_5m.yaml  scalp_seed_list.yaml  smc_sd_mean.yaml  test_luxalgo_cdc.yaml  tv_ehlers_wf.yaml  tv_seed_list.yaml  tv_squeeze_filter.yaml  tv_stack_wf.yaml  xauusd_mtf.yaml
code3.0/streamlit_app/: app.py
code3.0/tests/: test_backfill.py  test_data_loading.py  test_engine_tf_scale.py  test_verdicts.py
(+843 files in other folders)
