[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade2"
version = "2.0.0"
description = "XAUUSD Automated Quant Research System"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "hmmlearn>=0.3",
    "scikit-learn>=1.3",
    "TA-Lib>=0.4",
    "optuna>=3.0",
    "joblib>=1.3",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.30", "plotly>=5.18"]

[project.scripts]
trade2 = "trade2.app.run_pipeline:main"
full_scheme_search = "trade2.app.full_scheme_search:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
